--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
           </section>
         </main>
         </div>
+        <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
